*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7170 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/kadm5/ChangeLog
+++ b/lib/kadm5/ChangeLog
@@ -1,3 +1,12 @@
+1999-10-17  Assar Westerlund  <assar@sics.se>
+
+	* randkey_s.c (kadm5_s_randkey_principal): use
+ 	_kadm5_set_keys_randomly
+
+	* set_keys.c (free_keys): free more memory
+	(_kadm5_set_keys): a little bit more generic
+	(_kadm5_set_keys_randomly): new function for setting random keys.
+
 1999-10-14  Assar Westerlund  <assar@sics.se>
 
 	* set_keys.c (_kadm5_set_keys): ignore old keys when setting new
