--- a/examples/autofs/README
+++ b/examples/autofs/README
@@ -6,3 +6,8 @@ This means you can use smbmount with autofs by just specifying smb as
 the filesystem type. See the smbmount man page for a full list of
 options.
 
+The server path to mount must be of the form ://server/share or
+automount won't accept it. Also, you must make sure that smbmnt is in
+the path so that it will be found by smbmount.
+
+
