--- a/lib/auth/ChangeLog
+++ b/lib/auth/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-17  Assar Westerlund  <assar@sics.se>
+
+	* afskauthlib/verify.c (verify_krb5): need realm for v5 -> v4
+
 1999-10-03  Assar Westerlund  <assar@sics.se>
 
 	* afskauthlib/verify.c (verify_krb5): update to new
