--- a/docs/manpages/smbmount.8
+++ b/docs/manpages/smbmount.8
@@ -15,6 +15,9 @@ must support the smbfs filesystem\&.
 Options to smbmount are specified as a comma separated list of
 key=value pairs\&. 
 .PP 
+NOTE: smbmount calls smbmnt to do the actual mount\&. You must make sure
+that smbmnt is in the path so that it can be found\&.
+.PP 
 .IP "\fBusername=<arg>\fP" 
 specifies the username to connect as\&. If this is
 not given then the environment variable USER is used\&. This option can
