--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,5 +1,8 @@
 1999-10-18  Johan Danielsson  <joda@pdc.kth.se>
 
+	* ftpd/ftpd.c: change `-l' flag to use arg_collect (this makes
+	`-ll' work again)
+
 	* ftpd/ftpd.c (list_file): pass filename to ls
 
 1999-10-04  Johan Danielsson  <joda@pdc.kth.se>
