--- a/docs/manpages/smb.conf.5
+++ b/docs/manpages/smb.conf.5
@@ -1545,11 +1545,11 @@ shares in a net view and in the browse list\&.
 \fBExample:\fP
 \f(CW	browseable = No\fP
 .IP 
-.IP "\fBcase sensitive (G)\fP" 
+.IP "\fBcase sensitive (S)\fP" 
 .IP 
 See the discussion in the section \fBNAME MANGLING\fP\&.
 .IP 
-.IP "\fBcasesignames (G)\fP" 
+.IP "\fBcasesignames (S)\fP" 
 .IP 
 Synonym for \fB"case sensitive"\fP\&.
 .IP 
@@ -5643,7 +5643,7 @@ smaller size, reducing by a factor of 0\&.8 until the OS accepts it\&.
 \fBExample:\fP
 \f(CW	shared mem size = 5242880 ; Set to 5mb for a large number of files\&.\fP
 .IP 
-.IP "\fBshort preserve case (G)\fP" 
+.IP "\fBshort preserve case (S)\fP" 
 .IP 
 This boolean parameter controls if new files which conform to 8\&.3
 syntax, that is all in upper case and of suitable length, are created
@@ -6457,7 +6457,7 @@ print job\&.
 \fBExample:\fP
 \f(CW	username map = /usr/local/samba/lib/users\&.map\fP
 .IP 
-.IP "\fBvalid chars (S)\fP" 
+.IP "\fBvalid chars (G)\fP" 
 .IP 
 The option allows you to specify additional characters that should be
 considered valid by the server in filenames\&. This is particularly
