--- a/lib/des/ChangeLog
+++ b/lib/des/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-20  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am: bump version to 0:2:0
+
 1999-09-21  Johan Danielsson  <joda@pdc.kth.se>
 
 	* des.h: make this work with mips 64-bit abi
