--- a/lib/otp/ChangeLog
+++ b/lib/otp/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-20  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am: set version to 0:1:0
+
 Fri Mar 19 14:52:48 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* Makefile.am: add version-info
