--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-20  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am: set version to 3:0:0
+
 1999-10-18  Johan Danielsson  <joda@pdc.kth.se>
 
 	* getarg.3: document arg_collect
