--- a/lib/kafs/ChangeLog
+++ b/lib/kafs/ChangeLog
@@ -1,3 +1,8 @@
+Mon Oct 18 17:40:21 1999  Bjoern Groenvall  <bg@mummel.sics.se>
+
+	* common.c (find_cells): Trim trailing whitespace from
+ 	cellname. Lines starting with # are regarded as comments.
+
 1999-10-20  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am: set version to 1:1:1
