*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7232 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/rsh/ChangeLog
+++ b/appl/rsh/ChangeLog
@@ -1,3 +1,11 @@
+1999-10-26  Assar Westerlund  <assar@sics.se>
+
+	* rshd.c (main): ignore SIGPIPE
+
+	* common.c (do_read): the encoded length can be longer than the
+ 	buffer being used, allocate memory for it dynamically.  From Brian
+ 	A May <bmay@dgs.monash.edu.au>
+
 1999-10-14  Assar Westerlund  <assar@sics.se>
 
 	* rsh.c (proto): be more careful and don't print errno when read()
