*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7236 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in release 0.2b:
+
+ * bug fixes
+ * actually bump shared library versions
+
 Changes in release 0.2a:
 
  * a new program verify_krb5_conf for checking your /etc/krb5.conf
