--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Oct 26 15:31:01 1999  Assar Westerlund  <assar@juguete.sics.se>
+
+	* Release 0.2b
+
 1999-10-20  Assar Westerlund  <assar@sics.se>
 
 	* lib/krb5/Makefile.am: bump version to 4:0:0
