*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7238 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-Tue Oct 26 15:31:01 1999  Assar Westerlund  <assar@juguete.sics.se>
+1999-10-26  Assar Westerlund  <assar@sics.se>
 
 	* Release 0.2b
 
