--- a/appl/login/ChangeLog
+++ b/appl/login/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-27  Assar Westerlund  <assar@sics.se>
+
+	* login.c (do_login): chown and chmod the tty.  some clean-up.
+
 1999-10-03  Assar Westerlund  <assar@sics.se>
 
 	* login.c (krb5_start_session): correct the ccache to
