*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7248 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,5 +1,7 @@
 1999-10-28  Assar Westerlund  <assar@sics.se>
 
+	* ftpd/ls.c (builtin_ls): fix typo, 'd' shouldn't imply 'f'
+
 	* ftpd/ls.c (lstat_file): new function for avoiding stating AFS
  	mount points.  From Love <lha@s3.kth.se>
 	(list_files): use `lstat_file'
