*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7255 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-10-28  Assar Westerlund  <assar@sics.se>
+
+	* lib/krb5/Makefile.am: bump version to 4:1:0
+
+	* kdc/config.c (configure): more careful with the port string
+
 1999-10-26  Assar Westerlund  <assar@sics.se>
 
 	* Release 0.2b
