--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Oct 28 20:35:39 1999  Assar Westerlund  <assar@juguete.sics.se>
+
+	* Release 0.2c
+
 1999-10-28  Assar Westerlund  <assar@sics.se>
 
 	* lib/krb5/Makefile.am: bump version to 4:1:0
