--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,11 @@
+1999-10-28  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am: bump version to 3:1:0
+
+	* roken.h.in: use `unsigned char' instead of `u_int8_t' to avoid
+ 	having to have that definition.  this is the easy way out instead
+ 	of getting the definition here where it's needed.  flame me.
+
 Fri Oct 22 15:39:31 1999  Bjoern Groenvall  <bg@sics.se>
 
 	* k_getpwuid.c (k_getpwuid): getspuid() does not exist (even
