*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7276 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/des/ChangeLog
+++ b/lib/des/ChangeLog
@@ -1,3 +1,9 @@
+1999-10-28  Assar Westerlund  <assar@sics.se>
+
+	* md5crypt_test.c: change the test case.  apparently we should not
+ 	include $ after the salt.  also make it print more useful stuff
+ 	when failing.
+
 1999-10-20  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am: bump version to 0:2:0
