*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7280 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* Release 0.2c
 
+	* lib/krb5/dump_config.c (print_tree): check for empty tree
+
 	* lib/krb5/string-to-key-test.c (tests): update the test cases
  	with empty principals so that they actually use an empty realm and
  	not the default.  use the correct etype for 3DES
