*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7288 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,9 @@
+1999-10-30  Assar Westerlund  <assar@sics.se>
+
+	* snprintf.c (PARSE_INT_FORMAT): add redundant casts to work
+ 	around a gcc-bug that manifests itself on Linux-PPC.  From Tom
+ 	Rini <trini@kernel.crashing.org>
+
 1999-10-28  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am: bump version to 3:1:0
