--- a/appl/login/ChangeLog
+++ b/appl/login/ChangeLog
@@ -1,3 +1,8 @@
+1999-10-30  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am (login_DEPENDENCIES): remove, it's not entirely
+ 	correct and was causing problems with non-GNU make
+
 1999-10-28  Assar Westerlund  <assar@sics.se>
 
 	* login.c (start_logout_proceess): don't examine `prog' before
