--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,3 +1,13 @@
+1999-10-30  Assar Westerlund  <assar@sics.se>
+
+	* find-func-no-libs2.m4: add yet another argument to allow specify
+ 	linker flags that will be added _before_ the library when trying
+ 	to link
+
+	* find-func-no-libs.m4: add yet another argument to allow specify
+ 	linker flags that will be added _before_ the library when trying
+ 	to link
+
 1999-10-12  Assar Westerlund  <assar@sics.se>
 
 	* find-func-no-libs2.m4 (AC_FIND_FUNC_NO_LIBS2): new argument
