--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,3 +1,10 @@
+1999-11-01  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am.common (install-build-headers): use `cp' instead of
+ 	INSTALL_DATA for copying header files inside the build tree.  The
+ 	user might have redefined INSTALL_DATA to specify owners and other
+ 	information.
+
 1999-10-30  Assar Westerlund  <assar@sics.se>
 
 	* find-func-no-libs2.m4: add yet another argument to allow specify
