*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7298 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1999-11-02  Assar Westerlund  <assar@sics.se>
+
+	* configure.in (VERSION): bump to 0.2d-pre
+
+1999-10-29  Assar Westerlund  <assar@sics.se>
+
+	* lib/krb5/principal.c (krb5_parse_name): check memory allocations
+
 1999-10-28  Assar Westerlund  <assar@sics.se>
 
 	* Release 0.2c
