--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -1,3 +1,8 @@
+1999-11-02  Assar Westerlund  <assar@sics.se>
+
+	* kx.c (main): redo the v4/v5 selection for consistency.  -4 ->
+ 	try only v4 -5 -> try only v5 none, -45 -> try v5, v4
+
 1999-10-10  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am (CLEANFILES): add generated files so that they get
