--- a/appl/push/ChangeLog
+++ b/appl/push/ChangeLog
@@ -1,3 +1,8 @@
+1999-11-02  Assar Westerlund  <assar@sics.se>
+
+	* push.c (main): redo the v4/v5 selection for consistency.  -4 ->
+ 	try only v4 -5 -> try only v5 none, -45 -> try v5, v4
+
 1999-08-19  Assar Westerlund  <assar@sics.se>
 
 	* push.c (doit): remember to step over the error message when we
