--- a/lib/krb5/krb5.conf.5
+++ b/lib/krb5/krb5.conf.5
@@ -68,6 +68,8 @@ manual page.
 .It Li capath = Va realm-routing-table
 .It Li default_etypes = Va etypes...
 A list of default etypes to use.
+.It Li default_etypes_des = Va etypes...
+A list of default etypes to use when requesting a DES credential.
 .It Li default_keytab_name = Va keytab
 The keytab to use if none other is specified, default is
 .Dq FILE:/etc/krb5.keytab .
