--- a/lib/kadm5/ChangeLog
+++ b/lib/kadm5/ChangeLog
@@ -1,3 +1,8 @@
+1999-11-04  Assar Westerlund  <assar@sics.se>
+
+	* set_keys.c (_kadm5_set_keys_randomly): set enctypes correctly in
+ 	the copied keys
+
 1999-10-20  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am: set version of kadm5srv to 3:0:2 (new password
