--- a/lib/kadm5/ChangeLog
+++ b/lib/kadm5/ChangeLog
@@ -1,5 +1,8 @@
 1999-11-04  Assar Westerlund  <assar@sics.se>
 
+	* Makefile.am: bump version to 4:0:0 and 3:0:0 (they access fields
+ 	directly in libkrb5's context - bad functions)
+
 	* set_keys.c (_kadm5_set_keys_randomly): set enctypes correctly in
  	the copied keys
 
