--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,7 @@
+1999-11-04  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am: bump version to 3:2:0
+
 1999-10-30  Assar Westerlund  <assar@sics.se>
 
 	* snprintf.c (PARSE_INT_FORMAT): add redundant casts to work
