--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,3 +1,8 @@
+1999-11-04  Assar Westerlund  <assar@sics.se>
+
+	* ftpd/ls.c (S_ISSOCK, S_ISLNK): fallback definitions for systems
+ 	that don't have them (such as ultrix)
+
 1999-10-29  Assar Westerlund  <assar@sics.se>
 
 	* ftpd/ls.c (make_fileinfo): cast uid's and gid's to unsigned in
