*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7317 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,3 +1,7 @@
+1999-11-05  Assar Westerlund  <assar@sics.se>
+
+	* check-x.m4: include X_PRE_LIBS and X_EXTRA_LIBS when testing
+
 1999-11-01  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am.common (install-build-headers): use `cp' instead of
