--- a/lib/kadm5/ChangeLog
+++ b/lib/kadm5/ChangeLog
@@ -1,3 +1,8 @@
+1999-11-05  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am (install-build-headers): use `cp' instead of
+ 	INSTALL_DATA
+
 1999-11-04  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am: bump version to 4:0:0 and 3:0:0 (they access fields
