--- a/appl/login/ChangeLog
+++ b/appl/login/ChangeLog
@@ -1,3 +1,7 @@
+1999-11-05  Assar Westerlund  <assar@sics.se>
+
+	* login.c (do_login): conditionalize shadow stuff on getspnam
+
 1999-10-30  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am (login_DEPENDENCIES): remove, it's not entirely
