--- a/kadmin/ChangeLog
+++ b/kadmin/ChangeLog
@@ -1,3 +1,9 @@
+1999-11-09  Johan Danielsson  <joda@pdc.kth.se>
+
+	* server.c: cope with old clients
+
+	* kadmin_locl.h: remove version string
+
 1999-10-17  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am (kadmin_LDADD): add LIB_dlopen
