Update to smb.conf.5.yo to sync with 2.0. tree. Jeremy.

--- a/docs/manpages/smbmount.8
+++ b/docs/manpages/smbmount.8
@@ -84,4 +84,4 @@ mount read-write
 .PP 
 .SH "AUTHOR" 
 The maintainer of smbfs, smbmnt and smbmount is Andrew Tridgell
-\fItridge@samba\&.org\fP
+tridge@samba\&.org
