--- a/docs/manpages/smb.conf.5
+++ b/docs/manpages/smb.conf.5
@@ -242,7 +242,6 @@ would look like this:
 
  	[printers]
  		path = /usr/spool/public
- 		writeable = no
  		guest ok = yes
  		printable = yes 
 
@@ -378,7 +377,7 @@ negotiation\&. It can be one of CORE, COREPLUS, LANMAN1, LANMAN2 or NT1\&.
 machine\&. Only some are recognized, and those may not be 100%
 reliable\&. It currently recognizes Samba, WfWg, WinNT and
 Win95\&. Anything else will be known as "UNKNOWN"\&. If it gets it wrong
-then sending a level 3 log to \fIsamba-bugs@samba\&.org\fP
+then sending a level 3 log to samba-bugs@samba\&.org
 should allow it to be fixed\&.
 .IP 
 .IP o 
@@ -2232,7 +2231,7 @@ Samba NT Domain Controller Code\&. It may be removed in a later release\&.
 To work with the latest code builds that may have more support for
 Samba NT Domain Controller functionality please subscribe to the
 mailing list \fBSamba-ntdom\fP available by sending email to
-\fIlistproc@samba\&.org\fP
+listproc@samba\&.org
 .IP 
 .IP "\fBdomain admin users (G)\fP" 
 .IP 
@@ -2241,7 +2240,7 @@ Samba NT Domain Controller Code\&. It may be removed in a later release\&.
 To work with the latest code builds that may have more support for
 Samba NT Domain Controller functionality please subscribe to the
 mailing list \fBSamba-ntdom\fP available by sending email to
-\fIlistproc@samba\&.org\fP
+listproc@samba\&.org
 .IP 
 .IP "\fBdomain controller (G)\fP" 
 .IP 
@@ -2256,7 +2255,7 @@ Samba NT Domain Controller Code\&. It may be removed in a later release\&.
 To work with the latest code builds that may have more support for
 Samba NT Domain Controller functionality please subscribe to the
 mailing list \fBSamba-ntdom\fP available by sending email to
-\fIlistproc@samba\&.org\fP
+listproc@samba\&.org
 .IP 
 .IP "\fBdomain guest group (G)\fP" 
 .IP 
@@ -2265,7 +2264,7 @@ Samba NT Domain Controller Code\&. It may be removed in a later release\&.
 To work with the latest code builds that may have more support for
 Samba NT Domain Controller functionality please subscribe to the
 mailing list \fBSamba-ntdom\fP available by sending email to
-\fIlistproc@samba\&.org\fP
+listproc@samba\&.org
 .IP 
 .IP "\fBdomain guest users (G)\fP" 
 .IP 
@@ -2274,7 +2273,7 @@ Samba NT Domain Controller Code\&. It may be removed in a later release\&.
 To work with the latest code builds that may have more support for
 Samba NT Domain Controller functionality please subscribe to the
 mailing list \fBSamba-ntdom\fP available by sending email to
-\fIlistproc@samba\&.org\fP
+listproc@samba\&.org
 .IP 
 .IP "\fBdomain logons (G)\fP" 
 .IP 
@@ -4912,7 +4911,7 @@ find the printer driver files for the automatic installation of
 drivers for Windows 95 machines\&. If Samba is set up to serve printer
 drivers to Windows 95 machines, this should be set to
 .IP 
-\f(CW\e\eMACHINE\eaPRINTER$\fP
+\f(CW\e\eMACHINE\ePRINTER$\fP
 .IP 
 Where MACHINE is the NetBIOS name of your Samba server, and PRINTER$
 is a share you set up for serving printer driver files\&. For more
@@ -5709,7 +5708,7 @@ You may find that on some systems Samba will say "Unknown socket
 option" when you supply an option\&. This means you either incorrectly 
 typed it or you need to add an include file to includes\&.h for your OS\&. 
 If the latter is the case please send the patch to
-\fIsamba-bugs@samba\&.org\fP\&.
+samba-bugs@samba\&.org\&.
 .IP 
 Any of the supported socket options may be combined in any way you
 like, as long as your OS allows it\&.
@@ -6514,7 +6513,7 @@ them\&.
 .IP 
 NOTE: It is actually quite difficult to correctly produce a \fB"valid
 chars"\fP line for a particular system\&. To automate the process
-\fItino@augsburg\&.net\fP has written a package called \fB"validchars"\fP
+tino@augsburg\&.net has written a package called \fB"validchars"\fP
 which will automatically produce a complete \fB"valid chars"\fP line for
 a given client system\&. Look in the examples/validchars/ subdirectory
 of your Samba source code distribution for this package\&.
@@ -6844,7 +6843,7 @@ This man page is correct for version 2\&.0 of the Samba suite\&.
 .SH "AUTHOR" 
 .PP 
 The original Samba software and related utilities were created by
-Andrew Tridgell \fIsamba-bugs@samba\&.org\fP\&. Samba is now developed
+Andrew Tridgell samba-bugs@samba\&.org\&. Samba is now developed
 by the Samba Team as an Open Source project similar to the way the
 Linux kernel is developed\&.
 .PP 
@@ -6853,7 +6852,7 @@ sources were converted to YODL format (another excellent piece of Open
 Source software, available at
 \fBftp://ftp\&.icce\&.rug\&.nl/pub/unix/\fP)
 and updated for the Samba2\&.0 release by Jeremy Allison\&.
-\fIsamba-bugs@samba\&.org\fP\&.
+samba-bugs@samba\&.org\&.
 .PP 
 See \fBsamba (7)\fP to find out how to get a full
 list of contributors and details on how to submit bug reports,
