Ensure smbmount docs get shipped. Jeremy.

--- a/docs/manpages/smbmount.8
+++ b/docs/manpages/smbmount.8
@@ -8,7 +8,7 @@ smbmount \- mount an SMB filesystem
 .PP 
 .SH "DESCRIPTION" 
 .PP 
-smbmount mounts a SMB filesystem\&. It is usually invoked as mount\&.smb
+smbmount mounts a SMB filesystem\&. It is usually invoked as mount\&.smbfs
 from the mount(8) command when using the "-t smb" option\&. The kernel
 must support the smbfs filesystem\&.
 .PP 
