--- a/docs/manpages/smbmnt.8
+++ b/docs/manpages/smbmnt.8
@@ -1,4 +1,4 @@
-.TH "smbmnt " "1" "25 September 1999" "Samba" "SAMBA" 
+.TH SMBMNT 8 "11 Nov 1999" "smbmnt 2.0.6"
 .PP 
 .SH "NAME" 
 smbmnt \- helper utility for mounting SMB filesystems
