--- a/docs/manpages/smbmount.8
+++ b/docs/manpages/smbmount.8
@@ -1,4 +1,4 @@
-.TH "smbmount " "1" "25 September 1999" "Samba" "SAMBA" 
+.TH SMBMOUNT 8 "11 Nov 1999" "smbmount 2.0.6"
 .PP 
 .SH "NAME" 
 smbmount \- mount an SMB filesystem
