*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7346 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/roken/ChangeLog
+++ b/lib/roken/ChangeLog
@@ -1,3 +1,8 @@
+1999-11-09  Assar Westerlund  <assar@sics.se>
+
+	* strftime.c (strftime): correct %E and %O handling.  do something
+ 	reasonable with "...%"
+
 1999-11-07  Assar Westerlund  <assar@sics.se>
 
 	* parse_bytes-test.c: new file
