--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+1999-11-12  Assar Westerlund  <assar@sics.se>
+
+	* lib/krb5/get_in_tkt.c (krb5_get_in_cred): generate
+	preauthentication information if we get back ERR_PREAUTH_REQUIRED
+	* lib/krb5/init_creds_pw.c (krb5_get_init_creds_password): remove
+	preauthentication generation code.  it's now in krb5_get_in_cred
+	
+	* configure.in (AC_BROKEN_SNPRINTF): add strptime check for struct
+	tm.tm_gmtoff and timezone
+	
 1999-11-11  Johan Danielsson  <joda@pdc.kth.se>
 
 	* kdc/main.c: make this work with multi-db
