*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7360 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/TODO
+++ b/TODO
@@ -4,6 +4,10 @@ $Id$
 
 * configure
 
+use more careful checking before starting to use berkeley db.  it only
+makes sense to do so if we have the appropriate library and the header
+file.
+
 * appl
 
 more programs here
