*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7362 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/push/ChangeLog
+++ b/appl/push/ChangeLog
@@ -1,3 +1,7 @@
+1999-11-13  Assar Westerlund  <assar@sics.se>
+
+	* push.c: make `-v' a arg_counter
+	
 1999-11-02  Assar Westerlund  <assar@sics.se>
 
 	* push.c (main): redo the v4/v5 selection for consistency.  -4 ->
