*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7378 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/kadm5/ChangeLog
+++ b/lib/kadm5/ChangeLog
@@ -1,3 +1,8 @@
+1999-11-13  Assar Westerlund  <assar@sics.se>
+
+	* password_quality.c (kadm5_setup_passwd_quality_check): use
+	correct types for function pointers
+	
 1999-11-09  Johan Danielsson  <joda@pdc.kth.se>
 
 	* randkey_s.c: always bail out if the fetch fails
