*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7381 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/ftp/ChangeLog
+++ b/appl/ftp/ChangeLog
@@ -1,3 +1,7 @@
+1999-11-12  Assar Westerlund  <assar@sics.se>
+
+	* ftpd/ftpd.c (args): use arg_counter for `l'
+	
 1999-11-04  Assar Westerlund  <assar@sics.se>
 
 	* ftpd/ls.c (S_ISSOCK, S_ISLNK): fallback definitions for systems
