*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7391 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/kadm5/ChangeLog
+++ b/lib/kadm5/ChangeLog
@@ -1,3 +1,10 @@
+1999-11-14  Assar Westerlund  <assar@sics.se>
+
+	* context_s.c (_kadm5_s_init_context): call krb5_add_et_list so
+ 	that we aren't dependent on the layout of krb5_context_data
+	* init_c.c (_kadm5_c_init_context): call krb5_add_et_list so that
+ 	we aren't dependent on the layout of krb5_context_data
+
 1999-11-13  Assar Westerlund  <assar@sics.se>
 
 	* password_quality.c (kadm5_setup_passwd_quality_check): use
