*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7399 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/auth/ChangeLog
+++ b/lib/auth/ChangeLog
@@ -1,3 +1,8 @@
+1999-11-15  Assar Westerlund  <assar@sics.se>
+
+	* */lib/Makefile.in: set LIBNAME.  From Enrico Scholz
+ 	<Enrico.Scholz@informatik.tu-chemnitz.de>
+
 1999-10-17  Assar Westerlund  <assar@sics.se>
 
 	* afskauthlib/verify.c (verify_krb5): need realm for v5 -> v4
