*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@7401 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Changes in release 0.2e:
+
+ * support for having several databases
+ * strptime (and new strftime) add to roken
+ * more paranoia about finding libdb
+ * bug fixes
+
 Changes in release 0.2d:
 
  * new configuration option [libdefaults]default_etypes_des
