--- a/appl/xnlock/ChangeLog
+++ b/appl/xnlock/ChangeLog
@@ -1,3 +1,8 @@
+1999-11-17  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.am: only build when we have X11.  From: Simon Josefsson
+ 	<jas@pdc.kth.se>
+
 Thu Mar 18 11:21:44 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* Makefile.am: include Makefile.am.common
