--- a/appl/kx/ChangeLog
+++ b/appl/kx/ChangeLog
@@ -1,3 +1,7 @@
+1999-11-18  Assar Westerlund  <assar@sics.se>
+
+	* krb5.c (krb5_destroy): free the correct part of the context
+	
 1999-11-02  Assar Westerlund  <assar@sics.se>
 
 	* kx.c (main): redo the v4/v5 selection for consistency.  -4 ->
