yodl update - rpcclient (This used to be commit 9eef1817f8f29c2d69832806b394658cf2cce5e9)

--- a/docs/manpages/smb.conf.5
+++ b/docs/manpages/smb.conf.5
@@ -1463,11 +1463,11 @@ shares in a net view and in the browse list\&.
 \fBExample:\fP
 \f(CW	browseable = No\fP
 .IP 
-.IP "\fBcase sensitive (G)\fP" 
+.IP "\fBcase sensitive (S)\fP" 
 .IP 
 See the discussion in the section \fBNAME MANGLING\fP\&.
 .IP 
-.IP "\fBcasesignames (G)\fP" 
+.IP "\fBcasesignames (S)\fP" 
 .IP 
 Synonym for \fB"case sensitive"\fP\&.
 .IP 
@@ -5301,7 +5301,7 @@ smb_shm_alloc : alloc of XX bytes failed"\fP\&.
 \fBExample:\fP
 \f(CW	shared mem size = 5242880 ; Set to 5mb for a large number of files\&.\fP
 .IP 
-.IP "\fBshort preserve case (G)\fP" 
+.IP "\fBshort preserve case (S)\fP" 
 .IP 
 This boolean parameter controls if new files which conform to 8\&.3
 syntax, that is all in upper case and of suitable length, are created
