--- a/docs/manpages/smbd.8
+++ b/docs/manpages/smbd.8
@@ -409,11 +409,16 @@ performance\&.
 .PP 
 .SH "SEE ALSO" 
 .PP 
-\fBhosts_access (5)\fP, \fBinetd (8)\fP, \fBnmbd (8)\fP,
-\fBsmb\&.conf (5)\fP, \fBsmbclient
-(1)\fP, \fBtestparm (1)\fP,
-\fBtestprns (1)\fP, and the Internet RFC\'s
-\fBrfc1001\&.txt\fP, \fBrfc1002\&.txt\fP\&. In addition the CIFS (formerly SMB)
+\fBhosts_access (5)\fP,
+\fBinetd (8)\fP,
+\fBnmbd (8)\fP,
+\fBsmb\&.conf (5)\fP,
+\fBsmbclient (1)\fP,
+\fBtestparm (1)\fP,
+\fBtestprns (1)\fP,
+\fBrpcclient (1)\fP,
+and the Internet RFC\'s \fBrfc1001\&.txt\fP, \fBrfc1002\&.txt\fP\&.
+In addition the CIFS (formerly SMB)
 specification is available as a link from the Web page :
 http://samba\&.org/cifs/\&.
 .PP 
